--- a/Name.html
+++ b/Name.html
@@ -3,8 +3,17 @@
         <title>Name</title>
         <style>
             h1{
-                font-size: 50px;
+                font-size: 70px;
                 text-align: center;
+            }
+            div{
+                margin-left: 43%;
+                margin-right: 40%;
+               
+                
+            }
+            li{
+                font-size: 30px;
             }
         </style>
     </head>
@@ -12,5 +21,10 @@
     <body>
         <br>
         <h1>Name</h1>
+        <div>
+        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/繁體中文.html">繁體中文</a></li>
+        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/簡體中文.html">簡體中文</a></li>
+        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/英文.html">英文</a></li>
+        </div>
     </body>
 </html>
