--- a/PatientMainPage.html
+++ b/PatientMainPage.html
@@ -38,7 +38,7 @@
             <li>Id</li>
             <li>Identifier</li>
             <li>Active</li>
-            <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Name">Name</a></li>
+            <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Name.html">Name</a></li>
             <li>Telecom</li>
             <li>Gender</li>
             <li>BirthDate</li>
