--- a/簡體中文.html
+++ b/簡體中文.html
@@ -18,13 +18,13 @@
 
     <body>
         <br>
-        <h1>繁體中文</h1>
+        <h1>簡體中文</h1>
         <p>格式：</p>
         <pre>
             {
                 "name"：
                 {
-                    "traditionalchinese":
+                    "simplifiedchinese":
                         {
                             "text" : "王小明"
                             "family" : "王"
