--- a/英文.html
+++ b/英文.html
@@ -24,11 +24,11 @@
             {
                 "name"：
                 {
-                    "traditionalchinese":
+                    "english":
                         {
-                            "text" : "王小明"
-                            "family" : "王"
-                            "given" : "小明"
+                            "text" : "Wang,Hsiao-Ming"
+                            "family" : "Wang"
+                            "given" : "Hsiao-Ming"
                         }
                 }
             }
