--- a/英文.html
+++ b/英文.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>繁體中文</title>
+        <title>英文</title>
         <style>
             h1{
                 font-size: 40px;
@@ -18,7 +18,7 @@
 
     <body>
         <br>
-        <h1>繁體中文</h1>
+        <h1>英文</h1>
         <p>格式：</p>
         <pre>
             {
