--- a/Name.html
+++ b/Name.html
@@ -22,9 +22,9 @@
         <br>
         <h1>Name</h1>
         <div>
-        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/繁體中文.html">繁體中文</a></li>
-        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/簡體中文.html">簡體中文</a></li>
-        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/英文.html">英文</a></li>
+        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/繁體中文.html">Traditional Chinese</a></li>
+        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/簡體中文.html">Simplified Chinese</a></li>
+        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/英文.html">English</a></li>
         </div>
     </body>
 </html>
