--- a/PatientMainPage.html
+++ b/PatientMainPage.html
@@ -39,7 +39,7 @@
             <li>Identifier</li>
             <li>Active</li>
             <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Name.html">Name</a></li>
-            <li>Telecom</li>
+            <li><a href="https://oulala0421.github.io/MITW2020Patient/Telecom.html">Telecom</a></li>
             <li>Gender</li>
             <li>BirthDate</li>
             <li>Deceased</li>
