--- a/簡體中文.html
+++ b/簡體中文.html
@@ -18,7 +18,7 @@
 
     <body>
         <br>
-        <h1>簡體中文</h1>
+        <h1>Simplified Chinese</h1>
         <p>格式：</p>
         <pre>
             {
