--- a/Name.html
+++ b/Name.html
@@ -7,8 +7,8 @@
                 text-align: center;
             }
             div{
-                margin-left: 43%;
-                margin-right: 40%;
+                margin-left: 40%;
+                margin-right: 35%;
                
                 
             }
@@ -22,9 +22,9 @@
         <br>
         <h1>Name</h1>
         <div>
-        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/繁體中文.html">Traditional Chinese</a></li>
-        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/簡體中文.html">Simplified Chinese</a></li>
-        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/英文.html">English</a></li>
+        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/繁體中文.html">Traditional Chinese</a></li><br>
+        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/簡體中文.html">Simplified Chinese</a></li><br>
+        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/英文.html">English</a></li><br>
         </div>
     </body>
 </html>
