--- a/簡體中文.html
+++ b/簡體中文.html
@@ -25,8 +25,8 @@
                 "name"：
                     {
                         "text" : "王小明"
-                        "family" : "王"
-                        "given" : "小明"
+                        "family" : ""
+                        "given" : "王小明"
                     }
             }
         </pre>
