--- a/英文.html
+++ b/英文.html
@@ -25,8 +25,8 @@
                 "name"：
                 {
                         "text" : "Wang,Hsiao-Ming"
-                        "family" : "Wang"
-                        "given" : "Hsiao-Ming"
+                        "family" : ""
+                        "given" : "Wang,Hsiao-Ming"
                 }
             }
         </pre>
