--- a/Name.html
+++ b/Name.html
@@ -49,9 +49,9 @@
         
 
         <div class="url">
-        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/繁體中文.html">Traditional Chinese</a></li><br>
-        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/簡體中文.html">Simplified Chinese</a></li><br>
-        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/英文.html">English</a></li><br>
+        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/TraditionalChinese.html">Traditional Chinese</a></li><br>
+        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/SimplifiedChinese.html">Simplified Chinese</a></li><br>
+        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/English.html">English</a></li><br>
         </div>
         <hr>
     </div>
