--- a/PatientMainPage.html
+++ b/PatientMainPage.html
@@ -40,7 +40,7 @@
             <li>Active</li>
             <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Name.html">Name</a></li>
             <li><a href="https://oulala0421.github.io/MITW2020Patient/Telecom.html">Telecom</a></li>
-            <li>Gender</li>
+            <li><a href="https://oulala0421.github.io/MITW2020Patient/Gender.html">Gender</a></li>
             <li>BirthDate</li>
             <li>Deceased</li>
                 </td>
