--- a/English.html
+++ b/English.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>英文</title>
+        <title>English</title>
         <style>
             h1{
                 font-size: 40px;
