--- a/TraditionalChinese.html
+++ b/TraditionalChinese.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>繁體中文</title>
+        <title>Traditional Chinese</title>
         <style>
             h1{
                 font-size: 40px;
