--- a/BirthDate.html
+++ b/BirthDate.html
@@ -41,7 +41,7 @@
         <h3>Example：</h3>
             <pre>
                 {
-                    "gender" ： "male"
+                    "birthDate" ： "1992-02-29"
                 }
             </pre>
         <hr>
