--- a/PatientMainPage.html
+++ b/PatientMainPage.html
@@ -41,7 +41,7 @@
             <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Name.html">Name</a></li>
             <li><a href="https://oulala0421.github.io/MITW2020Patient/Telecom.html">Telecom</a></li>
             <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Gender.html">Gender</a></li>
-            <li>BirthDate</li>
+            <li><a href="https://huang-che-yu.github.io/MITW2020Patient/BirthDate.html">BirthDate</a></li>
             <li>Deceased</li>
                 </td>
                 <td>
