--- a/PatientMainPage.html
+++ b/PatientMainPage.html
@@ -42,7 +42,7 @@
             <li><a href="https://oulala0421.github.io/MITW2020Patient/Telecom.html">Telecom</a></li>
             <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Gender.html">Gender</a></li>
             <li><a href="https://huang-che-yu.github.io/MITW2020Patient/BirthDate.html">BirthDate</a></li>
-            <li>Deceased</li>
+            <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Deceased.html">Deceased</a></li>
                 </td>
                 <td>
             <li>Address</li>
