--- a/PatientMainPage.html
+++ b/PatientMainPage.html
@@ -75,7 +75,7 @@
             <li>Address</li>
             <li>MaritalStatus</li>
             <li>MultipleBirth</li>
-            <li>Photo</li>
+            <li><a href="https://oulala0421.github.io/MITW2020Patient/Photo.html">Photo</a></li>
             <li>Contact</li>
             <li>Communication</li>
             <li>GeneralPractitioner</li>
