--- a/PatientMainPage.html
+++ b/PatientMainPage.html
@@ -72,14 +72,14 @@
             <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Deceased.html">Deceased</a></li>
                 </td>
                 <td>
-            <li>Address</li>
-            <li>MaritalStatus</li>
-            <li>MultipleBirth</li>
+            <li><a href="https://62065405.github.io/MITW2020patient/address.html">Address</a></li>
+            <li><a href="https://62065405.github.io/MITW2020patient/maritalstatus.html">MaritalStatus</a></li>
+            <li><a href="https://62065405.github.io/MITW2020patient/multipleBirth.html">MultipleBirth</a></li>
             <li><a href="https://oulala0421.github.io/MITW2020Patient/Photo.html">Photo</a></li>
-            <li>Contact</li>
-            <li>Communication</li>
-            <li>GeneralPractitioner</li>
-            <li>link</li>
+            <li><a href="https://62065405.github.io/MITW2020patient/contact.html">Contact</a></li>
+            <li><a href="https://62065405.github.io/MITW2020patient/communication.html">Communication</a></li>
+            <li><a href="https://62065405.github.io/MITW2020patient/generalPractitioner.html">GeneralPractitioner</a></li>
+            <li><a href="https://62065405.github.io/MITW2020patient/link.html">link</a></li>
                 </td>
                 
                     
