--- a/PatientMainPage.html
+++ b/PatientMainPage.html
@@ -62,9 +62,9 @@
         
             <tr>
                 <td style="padding-left: 30%;">
-            <li>Id</li>
+            <li><a href="https://oulala0421.github.io/MITW2020Patient/Id.html">Id</a></li>
             <li><a href="https://tedlee109.github.io/mitw2020patient/id.html">Identifier</a></li>
-            <li>Active</li>
+            <li><a href="https://oulala0421.github.io/MITW2020Patient/Active.html">Active</a></li>
             <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Name.html">Name</a></li>
             <li><a href="https://oulala0421.github.io/MITW2020Patient/Telecom.html">Telecom</a></li>
             <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Gender.html">Gender</a></li>
