--- a/SimplifiedChinese.html
+++ b/SimplifiedChinese.html
@@ -3,15 +3,24 @@
         <title>Simplified Chinese</title>
         <style>
             h1{
-                font-size: 40px;
-                padding-left: 3%;
+                font-size: 70px;
+                text-align: center;
+                height: 50px;
+            }
+            h3{
+                font-size: 25px;
             }
             p{
                 font-size: 20px;
-                padding-left: 5%;
             }
             pre{
                 font-size: 20px;
+            }
+            div{
+                margin-left: 20%;
+                margin-right: 20%;
+                border-style: unset;
+
             }
         </style>
     </head>
@@ -19,16 +28,21 @@
     <body>
         <br>
         <h1>Simplified Chinese</h1>
-        <p>格式：</p>
-        <pre>
-            {
-                "name"：
-                    {
-                        "text" : "王小明"
-                        "family" : ""
-                        "given" : "王小明"
-                    }
-            }
-        </pre>
+        <div>
+            <p>簡體中文姓名。</p>
+            <hr>
+            <p>格式：</p>
+            <pre>
+                {
+                    "name"：
+                        {
+                            "text" : "王小明"
+                            "family" : ""
+                            "given" : "王小明"
+                        }
+                }
+            </pre>
+            <hr>
+            </div>
     </body>
 </html>
