--- a/TraditionalChinese.html
+++ b/TraditionalChinese.html
@@ -3,15 +3,24 @@
         <title>Traditional Chinese</title>
         <style>
             h1{
-                font-size: 40px;
-                padding-left: 3%;
+                font-size: 70px;
+                text-align: center;
+                height: 50px;
+            }
+            h3{
+                font-size: 25px;
             }
             p{
                 font-size: 20px;
-                padding-left: 5%;
             }
             pre{
                 font-size: 20px;
+            }
+            div{
+                margin-left: 20%;
+                margin-right: 20%;
+                border-style: unset;
+
             }
         </style>
     </head>
@@ -19,6 +28,9 @@
     <body>
         <br>
         <h1>Traditional Chinese</h1>
+        <div>
+        <p>繁體中文姓名。</p>
+        <hr>
         <p>格式：</p>
         <pre>
             {
@@ -30,5 +42,7 @@
                     }
             }
         </pre>
+        <hr>
+        </div>
     </body>
 </html>
