--- a/SimplifiedChinese.html
+++ b/SimplifiedChinese.html
@@ -36,9 +36,9 @@
                 {
                     "name"：
                         {
-                            "text" : "王小明"
+                            "text" : "陈筱玲"
                             "family" : ""
-                            "given" : "王小明"
+                            "given" : "陈筱玲"
                         }
                 }
             </pre>
