--- a/PatientMainPage.html
+++ b/PatientMainPage.html
@@ -86,5 +86,16 @@
         
             </table>
         </div>
+        
+        <div class="main">
+            <hr>
+            <talbe>
+                <tr>
+                    <td>
+                        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Example1.html">Example1</a></li>
+                    </td>
+                </tr>
+            </talbe>
+        </div>
     </body>
 </html>
