--- a/PatientMainPage.html
+++ b/PatientMainPage.html
@@ -94,6 +94,9 @@
                     <td>
                         <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Example1.html">Example1</a></li>
                     </td>
+                    <td>
+                        <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Example2.html">Example2</a></li>
+                    </td>
                 </tr>
             </talbe>
         </div>
