--- a/Example1.html
+++ b/Example1.html
@@ -48,52 +48,48 @@
             "status": "generated",
             "div": "&lt;div xmlns=\"http://www.w3.org/1999/xhtml\"&gt;&lt;div class=\"hapiHeaderText\"&gt;Sussy 
             &lt;b&gt;JEREMIAH &lt;/b&gt;&lt;/div&gt;&lt;table class=\"hapiPropertyTable\"&gt;&lt;tbody&gt;&lt;tr&gt;&lt;td&gt;Identifier&lt;/td&gt;
-            &lt;td&gt;AB40730323&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;Address&lt;/td&gt;&lt;td&gt;&lt;span&gt;國興四街 42 號 &lt;/span&gt;&lt;br/&gt;&lt;span&gt;
+            &lt;td&gt;AB*****323&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;Address&lt;/td&gt;&lt;td&gt;&lt;span&gt;***街 ** 號 &lt;/span&gt;&lt;br/&gt;&lt;span&gt;
             花蓮市 &lt;/span&gt;&lt;span&gt;臺灣省 &lt;/span&gt;&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;Date of birth&lt;/td&gt;&lt;td&gt;&lt;span&gt;21 Decem
             ber 1993&lt;/span&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/tbody&gt;&lt;/table&gt;&lt;/div&gt;"
           },
           "identifier": [
             {
               "system": "https://www.dicom.org.tw/cs/passportNumber",
-              "value": "AB40730323"
+              "value": "AB*****323"
             },
             {
               "system": "https://www.dicom.org.tw/cs/ResidentNumber_tw",
-              "value": "UB77440430"
+              "value": "UB*****430"
             }
           ],
           "active": true,
           "name": [
             {
-              "text": "Sussy Jeremiah",
+              "text": "S***y Jeremiah",
               "family": "Jeremiah",
               "given": [
-                "Sussy"
+                "S***y"
               ]
             }
           ],
           "telecom": [
             {
               "system": "phone",
-              "value": "0938542901",
+              "value": "09*****901",
               "use": "mobile"
             },
             {
               "system": "email",
-              "value": "JD_0503@company.com"
-            },
-            {
-              "system": "url",
-              "value": "https://line.me/ti/p/debbie2385"
+              "value": "JD_****@company.com"
             }
           ],
           "gender": "female",
-          "birthDate": "1993-12-21",
+          "birthDate": "19**-**-**",
           "address": [
             {
-              "text": "970 臺灣省花蓮縣花蓮市國興四街 42 號",
+              "text": "970 臺灣省花蓮縣花蓮市***街 ** 號",
               "line": [
-                "國興四街 42 號"
+                "國興四街 ** 號"
               ],
               "city": "花蓮市",
               "district": "花蓮縣",
@@ -115,21 +111,21 @@
                 }
               ],
               "name": {
-                "text": "Kimberly John",
+                "text": "K****y John",
                 "family": "John",
                 "given": [
-                  "Kimberly"
+                  "K****y"
                 ]
               },
               "telecom": [
                 {
                   "system": "phone",
-                  "value": "0989278455",
+                  "value": "09*****455",
                   "use": "mobile"
                 },
                 {
                   "system": "email",
-                  "value": "kimberly_gg@company.com"
+                  "value": "kimbe*****@company.com"
                 },
                 {
                   "system": "url",
@@ -137,9 +133,9 @@
                 }
               ],
               "address": {
-                "text": "970 臺灣省花蓮縣花蓮市國興四街 42 號",
+                "text": "970 臺灣省花蓮縣花蓮市***街 ** 號",
                 "line": [
-                  "國興四街 42 號"
+                  "***街 ** 號"
                 ],
                 "city": "花蓮市",
                 "district": "花蓮縣",
