--- a/Example2.html
+++ b/Example2.html
@@ -43,45 +43,37 @@
             "identifier": [
               {
                 "system": "https://www.dicom.org.tw/cs/Residence_permit_number",
-                "value": "AC12345678"
+                "value": "AC*****678"
               }
             ],
             "active": true,
             "name": [
               {
-                "text": "徐佳穎",
+                "text": "徐*穎",
                 "family": "徐",
                 "given": [
-                  "佳穎"
+                  "*穎"
                 ]
               }
             ],
             "telecom": [
               {
                 "system": "email",
-                "value": "pzhu@hotmail.com"
+                "value": "****@hotmail.com"
               },
               {
                 "system": "phone",
-                "value": "0948117175",
+                "value": "09*****175",
                 "use": "mobile"
-              },
-              {
-                "system": "url",
-                "value": "https://line.me/ti/p/CNXGBv7lka"
-              },
-              {
-                  "system" : "fb",
-                  "value": "https://www.facebook.com/"
               }
             ],
             "gender": "female",
-            "birthDate": "1975-03-30",
+            "birthDate": "19**-**-**",
             "address": [
               {
-                "text": "000 臺灣省高雄市岡山區平和巷1號",
+                "text": "000 臺灣省高雄市岡山區**巷**號",
                 "line": [
-                  "平和巷1號"
+                  "**巷**號"
                 ],
                 "city": "岡山區",
                 "district": "高雄市",
@@ -89,9 +81,9 @@
                 "country": "臺灣省"
               },
               {
-                  "text": "97074 台灣省花蓮縣花蓮市介仁街178號",
+                  "text": "97074 台灣省花蓮縣花蓮市**街**號",
                   "line": [
-                    "介仁街178號"
+                    "介仁街**號"
                   ],
                   "city": "花蓮市",
                   "district": "花蓮縣",
@@ -113,31 +105,27 @@
                   }
                 ],
                 "name": {
-                  "text": "朱宇軒",
+                  "text": "朱*軒",
                   "family": "朱",
                   "given": [
-                    "宇軒"
+                    "*軒"
                   ]
                 },
                 "telecom": [
                   {
                     "system": "email",
-                    "value": "yongyang@hotmail.com"
+                    "value": "yon*****@hotmail.com"
                   },
                   {
                     "system": "phone",
-                    "value": "092809125",
+                    "value": "09****125",
                     "use": "mobile"
-                  },
-                  {
-                    "system": "url",
-                    "value": "https://line.me/ti/p/1eCoM2IcgP"
                   }
                 ],
                 "address": {
-                  "text": "806 臺灣省高雄市前鎮區永和街626號",
+                  "text": "806 臺灣省高雄市前鎮區**街**號",
                   "line": [
-                    "永和街626號"
+                    "**街**號"
                   ],
                   "city": "前鎮區",
                   "district": "高雄市",
@@ -159,31 +147,27 @@
                   }
                 ],
                 "name": {
-                  "text": "黃沖",
+                  "text": "黃*",
                   "family": "黃",
                   "given": [
-                    "沖"
+                    "*"
                   ]
                 },
                 "telecom": [
                   {
                     "system": "email",
-                    "value": "leihuang@hotmail.com"
+                    "value": "*****g@hotmail.com"
                   },
                   {
                     "system": "phone",
-                    "value": "0979097192",
+                    "value": "09*****192",
                     "use": "mobile"
-                  },
-                  {
-                    "system": "url",
-                    "value": "https://line.me/ti/p/mQOw6Z0PBe"
                   }
                 ],
                 "address": {
-                  "text": "000 臺灣省臺中市大甲區頂福州街564號",
+                  "text": "000 臺灣省臺中市大甲區**街**號",
                   "line": [
-                    "頂福州街564號"
+                    "**街**號"
                   ],
                   "city": "大甲區",
                   "district": "臺中市",
