--- a/PatientMainPage.html
+++ b/PatientMainPage.html
@@ -89,16 +89,18 @@
         
         <div class="main">
             <hr>
-            <talbe>
+            <talbe border="1">
                 <tr>
                     <td>
                         <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Example1.html">Example1</a></li>
                     </td>
+                    <br>
                     <td>
                         <li><a href="https://huang-che-yu.github.io/MITW2020Patient/Example2.html">Example2</a></li>
                     </td>
                 </tr>
             </talbe>
+            <hr>
         </div>
     </body>
 </html>
